--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-dragscroll": "^2.0.1",
     "react-icons": "^5.3.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
