--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dragscroll": "^2.0.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
