--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dragscroll": "^2.0.1",
